--- a/src/main.css
+++ b/src/main.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+html, body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#app {
+    width: 100%;
+    min-width: 100%;
+}
